--- a/ClienteSensor/nbproject/project.properties
+++ b/ClienteSensor/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/ClienteSensor
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Commnon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=18
+javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -71,11 +72,13 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ClienteSensor
-main.class=clientesensor.ClienteSensor
+main.class=cliente.servicios.ClienteSensor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Commnon=../SistemaDistribuidoIPS/Commnon
+reference.Commnon.jar=${project.Commnon}/dist/Commnon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
