--- a/ServidorAlertas/nbproject/project.properties
+++ b/ServidorAlertas/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/ServidorAlertas
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Commnon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,11 +72,13 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ServidorAlertas
-main.class=servidoralertas.ServidorAlertas
+main.class=servidor.servicios.ServidorAlertas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Commnon=../Commnon
+reference.Commnon.jar=${project.Commnon}/dist/Commnon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
