--- a/ClienteSensor/nbproject/project.properties
+++ b/ClienteSensor/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Commnon.jar}
+    ${reference.Commnon.jar}:\
+    ${reference.Commnon-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,6 +79,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.Commnon=../SistemaDistribuidoIPS/Commnon
+project.Commnon-1=../Commnon
+reference.Commnon-1.jar=${project.Commnon-1}/dist/Commnon.jar
 reference.Commnon.jar=${project.Commnon}/dist/Commnon.jar
 run.classpath=\
     ${javac.classpath}:\
