--- a/ClienteNotificacion/nbproject/private/private.properties
+++ b/ClienteNotificacion/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
