--- a/ServidorAlertas/nbproject/project.properties
+++ b/ServidorAlertas/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ServidorAlertas
-main.class=servidor.servicios.ServidorAlertas
+main.class=servidor.servicios.ServidorDeObjetos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
