--- a/ServidorAlertas/nbproject/project.properties
+++ b/ServidorAlertas/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ServidorAlertas
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.2.jar=C:\\Users\\snt-2\\Desktop\\servidor concurrente y secuencial\\servidor concurrente y secuencial\\gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Commnon.jar}
+    ${reference.Commnon.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ServidorAlertas
-main.class=servidor.servicios.ServidorAlertas
+main.class=servidor.servicios.ServidorDeObjetos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
