--- a/ClienteSensor/nbproject/private/private.properties
+++ b/ClienteSensor/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 project.Commnon=D:\\Unicauca\\Sistemas distribuidos\\01 Teoria\\Parcial 2\\SistemaDistribuidoIPS\\Commnon
-user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
