--- a/ServidorAlertas/nbproject/private/private.properties
+++ b/ServidorAlertas/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
