--- a/ServidorLogs/nbproject/project.properties
+++ b/ServidorLogs/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ServidorLogs
 excludes=
+file.reference.gson-2.8.2.jar-2=gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.gson-2.8.2.jar-1}
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
