--- a/ClienteSensor/nbproject/private/private.properties
+++ b/ClienteSensor/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-project.Commnon=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Entregar\\SistemaDistribuidoIPS\\Commnon
+project.Commnon=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\Commnon
 user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
