--- a/ServidorAlertas/nbproject/private/private.properties
+++ b/ServidorAlertas/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Entregar\\SistemaDistribuidoIPS\\ServidorLogs\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\ServidorAlertas\\gson-2.8.2.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
