--- a/ServidorLogs/nbproject/private/private.properties
+++ b/ServidorLogs/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
-file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Entregar\\SistemaDistribuidoIPS\\ServidorLogs\\gson-2.8.2.jar
-file.reference.gson-2.8.2.jar-1=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Entregar\\SistemaDistribuidoIPS\\ServidorLogs\\gson-2.8.2.jar
-user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
+file.reference.gson-2.8.2.jar=C:\\Users\\snt-2\\Desktop\\servidor concurrente y secuencial\\servidor concurrente y secuencial\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\snt-2\\Desktop\\servidor concurrente y secuencial\\servidor concurrente y secuencial\\gson-2.8.2.jar
+user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
