--- a/ServidorLogs/nbproject/project.properties
+++ b/ServidorLogs/nbproject/project.properties
@@ -39,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.gson-2.8.2.jar-1}:\
-    ${file.reference.gson-2.8.2.jar-2}
+    ${file.reference.gson-2.8.2.jar-2}:\
+    ${reference.Commnon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,6 +81,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Commnon=../Commnon
+reference.Commnon.jar=${project.Commnon}/dist/Commnon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
