--- a/ClienteNotificacion/nbproject/project.properties
+++ b/ClienteNotificacion/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Commnon.jar}
+    ${reference.Commnon.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
