--- a/ServidorAlertas/nbproject/private/private.properties
+++ b/ServidorAlertas/nbproject/private/private.properties
@@ -9,4 +9,4 @@ file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
