--- a/ServidorLogs/nbproject/private/private.properties
+++ b/ServidorLogs/nbproject/private/private.properties
@@ -1,5 +1,10 @@
 compile.on.save=true
 
-file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\ServidorLogs\\gson-2.8.2.jar
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.gson-2.8.2.jar-1=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\ServidorLogs\\gson-2.8.2.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
