--- a/ServidorLogs/nbproject/project.properties
+++ b/ServidorLogs/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ServidorLogs
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.2.jar-1=gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Commnon.jar}
+    ${reference.Commnon.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
