--- a/ClienteSensor/nbproject/private/private.properties
+++ b/ClienteSensor/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 
-project.Commnon=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\Commnon
-user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
+project.Commnon=D:\\Unicauca\\Sistemas distribuidos\\01 Teoria\\Parcial 2\\SistemaDistribuidoIPS\\Commnon
+user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
