--- a/ServidorAlertas/nbproject/private/private.properties
+++ b/ServidorAlertas/nbproject/private/private.properties
@@ -3,10 +3,10 @@ do.depend=false
 do.jar=true
 do.jlink=false
 
-file.reference.gson-2.8.2.jar=D:\\Unicauca\\Sistemas distribuidos\\01 Teoria\\Parcial 2\\SistemaDistribuidoIPS\\ServidorAlertas\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\ServidorAlertas\\gson-2.8.2.jar
 
 
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\snt-2\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
