--- a/ClienteSensor/nbproject/private/private.properties
+++ b/ClienteSensor/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 compile.on.save=true
 
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 project.Commnon=D:\\DOCUMENTOS\\Documentos Adrian\\1 Universidad\\2022\\1 SEM\\1 Sistemas Distribuidos\\Parcial 2\\Solucion\\Nueva\\SistemaDistribuidoIPS\\Commnon
 user.properties.file=C:\\Users\\adrianfelipegp\\AppData\\Roaming\\NetBeans\\13\\build.properties
