--- a/ServidorAlertas/nbproject/project.properties
+++ b/ServidorAlertas/nbproject/project.properties
@@ -36,13 +36,11 @@ dist.jlink.output=${dist.jlink.dir}/ServidorAlertas
 endorsed.classpath=
 excludes=
 file.reference.gson-2.8.2.jar=C:\\Users\\snt-2\\Desktop\\servidor concurrente y secuencial\\servidor concurrente y secuencial\\gson-2.8.2.jar
-file.reference.gson-2.8.2.jar-1=..\\ServidorLogs\\gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Commnon.jar}:\
-    ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.gson-2.8.2.jar-1}
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
